# otus-cpp-hw-12

./: CMakeLists.txt  docker-compose.yml
.github/workflows/: release.yaml
src/: CMakeLists.txt  FileReader.cpp  FileReader.h  Main.cpp  MapReduceService.cpp  MapReduceService.h  Mapper.cpp  Mapper.h  Reducer.cpp  Reducer.h  ShortestPrefixFinder.cpp  ShortestPrefixFinder.h  Shuffler.cpp  Shuffler.h  Splitter.cpp  Splitter.h  Types.h
test/: CMakeLists.txt  FileReaderTest.cpp  Resources.h.in  ShortestPrefixFinderTest.cpp  ShufflerTest.cpp  SplitterTest.cpp
test/test-data/file-reader-test/: data.txt
test/test-data/splitter-test/: all-lines-equal.txt  complex-partitions.txt  first-line-bigger.txt  second-line-bigger.txt  two-equal-sections.txt  two-sections-complex.txt
